[project]
name = "openet-ptjpl"
version = "0.3.0"
authors = [
    { name = "Gregory Halverson", email = "Gregory.H.Halverson@jpl.nasa.gov" },
    { name = "Josh Fisher", email = "joshbfisher@gmail.com" },
]
maintainers = [
    { name = "Gregory Halverson", email = "Gregory.H.Halverson@jpl.nasa.gov" },
]
description = "Earth Engine implementation of the PTJPL model"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["PTJPL", "OpenET", "Earth Engine", "Evapotranspiration", "Landsat"]
license = {file = "LICENSE"}
# license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "earthengine-api>=0.1.367",
    "openet-core>=0.4.0",
    # "openet-refet-gee>=0.2.0",
    "python-dateutil",
]

[project.urls]
"Homepage" = "https://github.com/Open-ET/openet-ptjpl"
# "Repository" = "https://github.com/Open-ET/openet-ptjpl.git"
# "Documentation" = "https://github.com/Open-ET/openet-ptjpl"
# "Bug Tracker" = "https://github.com/Open-ET/openet-ptjpl"
# "Changelog" = "https://github.com/Open-ET/openet-ptjpl"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
# include = ["openet*"]
exclude = ["examples*"]
